--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <p>More details on the individual sections</p>
         </div>
 
-        <div class="row">
+        <div class="row justify-content-center"> <!-- Center the boxes -->
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
@@ -339,82 +339,75 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Team</h2>
-          <p>Our team is always here to help</p>
         </div>
 
-        <div class="row">
+        <div class="row justify-content-center"> <!-- Center the boxes -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-xl-2 col-lg-3 col-md-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="member">
               <img src="img/team/team-1.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Sabiha Shaikh</h4>
                   <span>Team member</span>
-                </div>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <span>shkmos004@myuct.ac.za</span>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+          <div class="col-xl-2 col-lg-3 col-md-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="member">
               <img src="img/team/team-2.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Kristen Basson</h4>
                   <span>Team member</span>
-                </div>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <span>bsskri003@myuct.ac.za</span>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+          <div class="col-xl-2 col-lg-3 col-md-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="member">
               <img src="img/team/team-3.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Fardoza Tohab</h4>
                   <span>Team member</span>
-                </div>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <span>thbfar002@myuct.ac.za</span>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+          <div class="col-xl-2 col-lg-3 col-md-4" data-aos="zoom-in" data-aos-delay="400">
             <div class="member">
               <img src="img/team/team-4.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Prof. Hussein Suleman</h4>
                   <span>Supervisor</span>
-                </div>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <span>hussein@cs.uct.ac.za</span>
                 </div>
               </div>
             </div>
           </div>
+         
+          <div class="col-xl-2 col-lg-3 col-md-4" data-aos="zoom-in" data-aos-delay="500">
+            <div class="member">
+              <img src="img/team/team-5.jpg" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Dr Abayomi Abeyangi</h4>
+                  <span>Co-Supervisor</span>
+                  <span>abayomi.abeyangi@uct.ac.za</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
         </div>
 
