--- a/index.html
+++ b/index.html
@@ -117,23 +117,7 @@
              IsiXhosa is considered a low-resource language because of its limited availability of electronic documents. Natural language processing techniques require electronic documents to extract content for processing to enable computers to understand, interpret and generate spoken languages. Collecting and producing these materials is often time-consuming, costly, and often not feasible for low-resource languages. This project aims to assess the viability of automatically transcribing audio to create a high-quality textual corpus using standard speech tools and resources obtained from SADiLaR.
 
             </p>
-            <div class="row">
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-                <i class="bx bx-receipt"></i>
-                <h4>Gold Standard ASR Corpus</h4>
-                <p>Research question: Can crowdsourcing via a web application effectively produce a high-quality gold standard Automatic Speech Recognition corpus for isiXhosa from audio data collected from casual conversations and broadcast news?</p>
-              </div>
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
-                <i class="bx bx-receipt"></i>
-                <h4>SABC News Audio Transcription</h4>
-                <p>Research question: How accurate is the use of the CMUSphinx speech recognition toolkit (Sphinx4 and Pocketsphinx) for transcribing isiXhosa SABC news?</p>
-              </div>
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
-                <i class="bx bx-receipt"></i>
-                <h4>Mobile Audio Transcription</h4>
-                <p>Research question: How accurate is speech-to-text transcription of unstructured audio using the PocketSphinx speech recognition toolkit on mobile devices?</p>
-              </div>
-            </div>
+            
           </div>
         </div>
 
@@ -154,7 +138,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="">Gold Standard ASR Corpus</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
+              <p class="description">Research question: Can crowdsourcing via a web application effectively produce a high-quality gold standard Automatic Speech Recognition corpus for isiXhosa from audio data collected from casual conversations and broadcast news?</p>
             </div>
           </div>
 
@@ -162,7 +146,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="">SABC News Audio Transcription</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla</p>
+              <p class="description">Research question: How accurate is the use of the CMUSphinx speech recognition toolkit (Sphinx4 and Pocketsphinx) for transcribing isiXhosa SABC news?</p>
             </div>
           </div>
 
@@ -170,7 +154,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Mobile Audio Transcription</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim</p>
+              <p class="description">Research question: How accurate is speech-to-text transcription of unstructured audio using the PocketSphinx speech recognition toolkit on mobile devices?</p>
             </div>
           </div>
 
