--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Gold Standard ASR Corpus</a></h4>
+              <h4 class="title"><a href="sabiha.html">Gold Standard ASR Corpus</a></h4>
               <p class="description">Research question: Can crowdsourcing via a web application effectively produce a high-quality gold standard Automatic Speech Recognition corpus for isiXhosa from audio data collected from casual conversations and broadcast news?</p>
             </div>
           </div>
@@ -145,7 +145,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">SABC News Audio Transcription</a></h4>
+              <h4 class="title"><a href="kristen.html">SABC News Audio Transcription</a></h4>
               <p class="description">Research question: How accurate is the use of the CMUSphinx speech recognition toolkit (Sphinx4 and Pocketsphinx) for transcribing isiXhosa SABC news?</p>
             </div>
           </div>
@@ -153,7 +153,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Mobile Audio Transcription</a></h4>
+              <h4 class="title"><a href="fardoza.html">Mobile Audio Transcription</a></h4>
               <p class="description">Research question: How accurate is speech-to-text transcription of unstructured audio using the PocketSphinx speech recognition toolkit on mobile devices?</p>
             </div>
           </div>
@@ -201,7 +201,7 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Team</h2>
+          <h2>Team and Supervisors</h2>
         </div>
 
         <div class="row justify-content-center"> <!-- Center the boxes -->
@@ -263,7 +263,7 @@
               <img src="img/team/team-5.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Dr Abayomi Abeyangi</h4>
+                  <h4>Dr. Abayomi Abeyangi</h4>
                   <span>Co-Supervisor</span>
                   <span>abayomi.abeyangi@uct.ac.za</span>
                 </div>
@@ -302,7 +302,7 @@
             </p>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <!-- <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
@@ -311,9 +311,9 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
-          </div>
+          </div> -->
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <!-- <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -322,9 +322,9 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
-          </div>
+          </div> -->
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <!-- <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Social Networks</h4>
             <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
             <div class="social-links mt-3">
@@ -334,24 +334,24 @@
               <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
               <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </div>
     </div>
 
-    <div class="container py-4">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Ninestars</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
+    <!-- <div class="container py-4"> -->
+      <!-- <div class="copyright"> -->
+        <!-- &copy; Copyright <strong><span>Ninestars</span></strong>. All Rights Reserved -->
+      <!-- </div> -->
+      <!-- <div class="credits"> -->
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/ninestars-free-bootstrap-3-theme-for-creative/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+      <!-- </div> -->
+    <!-- </div> -->
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
