Changes made to the resources section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+
   <title>Ninestars Bootstrap Template - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -164,36 +170,90 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
-      <div class="container" data-aos="fade-up">
+<section id="portfolio" class="portfolio">
+  <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
+      <div class="section-title">
           <h2>Resources</h2>
           <p>If you are interested in learning more about our project or expanding upon our work, please find our full documentation below.</p>
-        </div>
-
-        <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
-          <div class="col-md-3 col-lg-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-     
-            <a href="Ex.zip" download="folder.zip">
-          	<button class="btn btn-primary">Literature Review</button>
-            </a>  
-            <a href="Ex.zip" download="folder.zip">
-               <button class="btn btn-primary">Project Proposal</button>
-            </a>
-            <a href="Ex.zip" download="folder.zip">
-               <button class="btn btn-primary">Final Papers</button>
-            </a>
-            <a href="Ex.zip" download="folder.zip">
-               <button class="btn btn-primary">Poster</button>
-            </a>
-          </div>
-        </div>
-
-        </div>
-
       </div>
-    </section><!-- End Portfolio Section -->
+
+      <!-- Gold Standard ASR corpus -->
+      <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
+          <h3 class="col-md-12 col-lg-12">Gold Standard ASR corpus</h3>
+          <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box">
+                  <i class="fas fa-book fa-3x"></i>
+                  <a href="Ex.zip" download="GoldStandardCorpusLiteratureReview.zip" class="resource-title">Literature Review</a>
+              </div>
+          </div>
+          <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box">
+                  <i class="fas fa-scroll fa-3x"></i>
+                  <a href="Ex.zip" download="GoldStandardCorpusPaper.zip" class="resource-title">Final Paper</a>
+              </div>
+          </div>
+      </div>
+
+      <!-- SABC News Audio Transcription -->
+      <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
+          <h3 class="col-md-12 col-lg-12">SABC News Audio Transcription</h3>
+          <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="150">
+              <div class="icon-box">
+                  <i class="fas fa-book fa-3x"></i>
+                  <a href="Ex.zip" download="SABCNewsLiteratureReview.zip" class="resource-title">Literature Review</a>
+              </div>
+          </div>
+          <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="150">
+              <div class="icon-box">
+                  <i class="fas fa-scroll fa-3x"></i>
+                  <a href="Ex.zip" download="SABCNewsPaper.zip" class="resource-title">Final Paper</a>
+              </div>
+          </div>
+      </div>
+
+      <!-- Mobile Audio Transcription -->
+      <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="200">
+          <h3 class="col-md-12 col-lg-12">Mobile Audio Transcription</h3>
+          <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="200">
+              <div class="icon-box">
+                  <i class="fas fa-book fa-3x"></i>
+                  <a href="Ex.zip" download="MobileAudioTranscriptionLiteratureReview.zip" class="resource-title">Literature Review</a>
+              </div>
+          </div>
+          <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="200">
+              <div class="icon-box">
+                  <i class="fas fa-scroll fa-3x"></i>
+                  <a href="Ex.zip" download="MobileAudioTranscriptionPaper.zip" class="resource-title">Final Paper</a>
+              </div>
+          </div>
+      </div>
+
+      <!-- Project Proposal -->
+      <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="250">
+          <h3 class="col-md-12 col-lg-12">Project Proposal</h3>
+          <div class="col-md-12 col-lg-12 mb-3" data-aos="zoom-in" data-aos-delay="250">
+              <div class="icon-box">
+                  <i class="fas fa-file-alt fa-3x"></i>
+                  <a href="Ex.zip" download="ProjectProposal.zip" class="resource-title">Download Proposal</a>
+              </div>
+          </div>
+      </div>
+
+      <!-- Poster -->
+      <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="300">
+          <h3 class="col-md-12 col-lg-12">Project Poster</h3>
+          <div class="col-md-12 col-lg-12 mb-3" data-aos="zoom-in" data-aos-delay="300">
+              <div class="icon-box">
+                  <i class="fas fa-image fa-3x"></i>
+                  <a href="Ex.zip" download="Poster.zip" class="resource-title">Download Poster</a>
+              </div>
+          </div>
+      </div>
+
+  </div>
+</section>
+<!-- End of portfolio section-->
 
    
     <!-- ======= Team Section ======= -->
@@ -366,6 +426,17 @@
 
   <!-- Template Main JS File -->
   <script src="main.js"></script>
+
+   <!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Bootstrap JS -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- Bootstrap's JavaScript and Popper.js Bundle -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
