--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Implementation</h2>
+          <h2>Research Questions</h2>
           <p>More details on the individual sections</p>
         </div>
 
@@ -118,24 +118,30 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div> -->
-              <h4 class="title"><a href="sabiha.html">Gold Standard ASR Corpus</a></h4>
-              <p class="description">Research question: Can crowdsourcing via a web application effectively produce a high-quality gold standard Automatic Speech Recognition corpus for isiXhosa from audio data collected from casual conversations and broadcast news?</p>
+              <a href="sabiha.html">
+              <h4 class="title">Gold Standard ASR Corpus</h4>
+              <p class="description">Can crowdsourcing via a web application effectively produce a high-quality gold standard Automatic Speech Recognition corpus for isiXhosa from audio data collected from casual conversations and broadcast news?</p>
+              </a>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
-              <h4 class="title"><a href="kristen.html">SABC News Audio Transcription</a></h4>
-              <p class="description">Research question: How accurate is the use of the CMUSphinx speech recognition toolkit (Sphinx4 and Pocketsphinx) for transcribing isiXhosa SABC news?</p>
+              <a href="kristen.html">
+              <h4 class="title">SABC News Audio Transcription</h4>
+              <p class="description">How accurate is the use of the CMUSphinx speech recognition toolkit (Sphinx4 and Pocketsphinx) for transcribing isiXhosa SABC news?</p>
+              </a>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bx-tachometer"></i></div> -->
-              <h4 class="title"><a href="fardoza.html">Mobile Audio Transcription</a></h4>
-              <p class="description">Research question: How accurate is speech-to-text transcription of unstructured audio using the PocketSphinx speech recognition toolkit on mobile devices?</p>
+              <a href="fardoza.html">
+              <h4 class="title">Mobile Audio Transcription</h4>
+              <p class="description">How accurate is speech-to-text transcription of unstructured audio using the PocketSphinx speech recognition toolkit on mobile devices?</p>
+              </a>
             </div>
           </div>
 
@@ -150,7 +156,7 @@
 
     <div class="section-title">
         <h2>Resources</h2>
-        <p>If you are interested in learning more about our project, please find our full documentation below.</p>
+        <p>If you are interested in learning more about our project, please find our full documentation below</p>
     </div>
     
     <!-- LITERATURE REVIEW -->
