changed links for sabcnews and poser&proposal

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
         <!-- Gold Standard ASR corpus -->
         <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="100">
           <div class="icon-box">
-            <h3>Gold Standard ASR corpus</h3>
             <a href="Ex.zip" download="GoldStandardCorpusLiteratureReview.zip">
+              <h3>Gold Standard ASR corpus</h3>
               <img src="img/written-paper.svg" alt="Icon" width="48" height="48">
               <span class="resource-title">Download Review</span>
             </a>
@@ -177,8 +177,8 @@
         <!-- SABC News Audio Transcription -->
         <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="150">
           <div class="icon-box">
-            <h3>SABC News Audio Transcription</h3>
-            <a href="Ex.zip" download="SABCNewsLiteratureReview.zip">
+            <a href="resources/SABCNewsLiteratureReview.pdf.zip" download="SABCNewsLiteratureReview.zip">
+              <h3>SABC News Audio Transcription</h3>
               <img src="img/written-paper.svg" alt="Icon" width="48" height="48">
               <span class="resource-title">Download Review</span>
             </a>
@@ -188,8 +188,8 @@
         <!-- Mobile Audio Transcription -->
         <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
-          <h3>Mobile Audio Transcription</h3>
           <a href="Ex.zip" download="MobileAudioTranscriptionLiteratureReview.zip">
+            <h3>Mobile Audio Transcription</h3>
             <img src="img/written-paper.svg" alt="Icon" width="48" height="48">
             <span class="resource-title">Download Review</span>
           </a>
@@ -201,8 +201,8 @@
         <h3 class="col-md-12 col-lg-12">Final Paper</h3>
         <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <h3>Gold Standard ASR corpus</h3>
               <a href="Ex.zip"download="GoldStandardCorpusPaper.zip">
+                <h3>Gold Standard ASR corpus</h3>
                 <img src="img/paper.png" alt="Icon" width="48" height="48">
                 <span class="resource-title">Download Paper</span>
               </a>
@@ -212,8 +212,8 @@
         <!-- SABC News Audio Transcription -->
         <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="150">
             <div class="icon-box">
-              <h3>SABC News Audio Transcription</h3>
-              <a href="Ex.zip"download="SABCNewsPaper.zip">
+              <a href="resources/SABCNewsPaper.pdf.zip"download="SABCNewsPaper.zip">
+                <h3>SABC News Audio Transcription</h3>
                 <img src="img/paper.png" alt="Icon" width="48" height="48">
                 <span class="resource-title">Download Paper</span>
               </a>
@@ -223,8 +223,8 @@
       <!-- Mobile Audio Transcription -->
       <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="200">
         <div class="icon-box">
-          <h3>Mobile Audio Transcription</h3>
           <a href="Ex.zip"download="MobileAudioTranscriptionPaper.zip">
+            <h3>Mobile Audio Transcription</h3>
             <img src="img/paper.png" alt="Icon" width="48" height="48">
             <span class="resource-title">Download Paper</span>
           </a>
@@ -234,12 +234,15 @@
 
     <!-- Project Proposal and Poster -->
     <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="250">
+
       <!-- Project Proposal -->
       <div class="col-md-6 col-lg-6" data-aos="zoom-in" data-aos-delay="250">
         <h3 class="col-md-12 col-lg-12">Project Proposal</h3>
         <div class="icon-box">
-          <img src="img/text-document-check-icon.svg" alt="Icon" width="48" height="48">
-          <a href="Ex.zip" download="ProjectProposal.zip" class="resource-title">Download Proposal</a>
+          <a href="resources/SABC2TXT_Proposal.pdf.zip"download="SABC2TXT_Proposal.zip">
+            <img src="img/poster-icon.svg" alt="Icon" width="48" height="48">
+            <span class="resource-title">Download Proposal</span>
+          </a>
         </div>
       </div>
 
@@ -247,8 +250,10 @@
       <div class="col-md-6 col-lg-6" data-aos="zoom-in" data-aos-delay="300">
         <h3 class="col-md-12 col-lg-12">Project Poster</h3>
         <div class="icon-box">
-          <img src="img/poster-icon.svg" alt="Icon" width="48" height="48">
-          <a href="Ex.zip" download="Poster.zip" class="resource-title">Download Poster</a>
+          <a href="resources/SABC2TXT_Poster.pdf.zip"download="SABC2TXT_Poster.zip">
+            <img src="img/poster-icon.svg" alt="Icon" width="48" height="48">
+            <span class="resource-title">Download Poster</span>
+          </a>
         </div>
       </div>
     </div>
