--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Implementation</a></li>
+          <li><a class="nav-link scrollto" href="#services">Research</a></li>
           <li><a class="nav-link scrollto" href="#portfolio">Resources</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
            
