--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <!-- Gold Standard ASR corpus -->
         <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="100">
           <div class="icon-box">
-            <a href="Ex.zip" download="GoldStandardCorpusLiteratureReview.zip">
+            <a href="resources/GoldStandardCorpusLiteratureReview.pdf.zip" download="GoldStandardCorpusLiteratureReview.zip">
               <h3>Gold Standard ASR corpus</h3>
               <img src="img/written-paper.svg" alt="Icon" width="48" height="48">
               <span class="resource-title">Download Review</span>
@@ -201,7 +201,7 @@
         <h3 class="col-md-12 col-lg-12">Final Paper</h3>
         <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <a href="Ex.zip"download="GoldStandardCorpusPaper.zip">
+              <a href="resources/GoldStandardCorpusPaper.pdf.zip" download="GoldStandardCorpusPaper.zip">
                 <h3>Gold Standard ASR corpus</h3>
                 <img src="img/paper.png" alt="Icon" width="48" height="48">
                 <span class="resource-title">Download Paper</span>
