--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <!-- Gold Standard ASR corpus -->
         <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="100">
           <div class="icon-box">
-            <a href="resources/GoldStandardCorpusLiteratureReview.pdf.zip" download="GoldStandardCorpusLiteratureReview.zip">
+            <a href="resources/GoldStandardCorpusLiteratureReview.pdf" download="GoldStandardCorpusLiteratureReview.pdf" target="_blank">
               <h3>Gold Standard ASR corpus</h3>
               <img src="img/written-paper.svg" alt="Icon" width="48" height="48">
               <span class="resource-title">Download Review</span>
@@ -177,7 +177,7 @@
         <!-- SABC News Audio Transcription -->
         <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="150">
           <div class="icon-box">
-            <a href="resources/SABCNewsLiteratureReview.pdf.zip" download="SABCNewsLiteratureReview.zip">
+            <a href="resources/SABCNewsLiteratureReview.pdf" download="SABCNewsLiteratureReview.pdf" target="_blank">
               <h3>SABC News Audio Transcription</h3>
               <img src="img/written-paper.svg" alt="Icon" width="48" height="48">
               <span class="resource-title">Download Review</span>
@@ -188,7 +188,7 @@
         <!-- Mobile Audio Transcription -->
         <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
-          <a href="Ex.zip" download="MobileAudioTranscriptionLiteratureReview.zip">
+          <a href="resources/MobileAudioTranscriptionLiteratureReview.pdf" download="MobileAudioTranscriptionLiteratureReview.pdf" target="_blank">
             <h3>Mobile Audio Transcription</h3>
             <img src="img/written-paper.svg" alt="Icon" width="48" height="48">
             <span class="resource-title">Download Review</span>
@@ -201,7 +201,7 @@
         <h3 class="col-md-12 col-lg-12">Final Paper</h3>
         <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <a href="resources/GoldStandardCorpusPaper.pdf.zip" download="GoldStandardCorpusPaper.zip">
+              <a href="resources/GoldStandardCorpusPaper.pdf"download="GoldStandardCorpusPaper.pdf" target="_blank">
                 <h3>Gold Standard ASR corpus</h3>
                 <img src="img/paper.png" alt="Icon" width="48" height="48">
                 <span class="resource-title">Download Paper</span>
@@ -212,7 +212,7 @@
         <!-- SABC News Audio Transcription -->
         <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="150">
             <div class="icon-box">
-              <a href="resources/SABCNewsPaper.pdf.zip"download="SABCNewsPaper.zip">
+              <a href="resources/SABCNewsPaper.pdf"download="SABCNewsPaper.pdf" target="_blank">
                 <h3>SABC News Audio Transcription</h3>
                 <img src="img/paper.png" alt="Icon" width="48" height="48">
                 <span class="resource-title">Download Paper</span>
@@ -223,7 +223,7 @@
       <!-- Mobile Audio Transcription -->
       <div class="col-md-6 col-lg-6 mb-3" data-aos="zoom-in" data-aos-delay="200">
         <div class="icon-box">
-          <a href="Ex.zip"download="MobileAudioTranscriptionPaper.zip">
+          <a href="resources/MobileAudioTranscriptionPaper.pdf"download="MobileAudioTranscriptionPaper.pdf" target="_blank">
             <h3>Mobile Audio Transcription</h3>
             <img src="img/paper.png" alt="Icon" width="48" height="48">
             <span class="resource-title">Download Paper</span>
@@ -239,7 +239,7 @@
       <div class="col-md-6 col-lg-6" data-aos="zoom-in" data-aos-delay="250">
         <h3 class="col-md-12 col-lg-12">Project Proposal</h3>
         <div class="icon-box">
-          <a href="resources/SABC2TXT_Proposal.pdf.zip"download="SABC2TXT_Proposal.zip">
+          <a href="resources/SABC2TXT_Proposal.pdf"download="SABC2TXT_Proposal.pdf" target="_blank">
             <img src="img/poster-icon.svg" alt="Icon" width="48" height="48">
             <span class="resource-title">Download Proposal</span>
           </a>
@@ -250,7 +250,7 @@
       <div class="col-md-6 col-lg-6" data-aos="zoom-in" data-aos-delay="300">
         <h3 class="col-md-12 col-lg-12">Project Poster</h3>
         <div class="icon-box">
-          <a href="resources/SABC2TXT_Poster.pdf.zip"download="SABC2TXT_Poster.zip">
+          <a href="resources/SABC2TXT_Poster.pdf"download="SABC2TXT_Poster.pdf" target="_blank">
             <img src="img/poster-icon.svg" alt="Icon" width="48" height="48">
             <span class="resource-title">Download Poster</span>
           </a>
