--- a/sabiha.html
+++ b/sabiha.html
@@ -51,7 +51,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="#abstract">Abstract</a></li>
-          <li><a class="nav-link scrollto" href="#methodology">Methodology</a></li>
+          <li><a class="nav-link scrollto" href="#methodology">Methods</a></li>
           <li><a class="nav-link scrollto" href="#results">Results</a></li>
           <li><a class="nav-link scrollto" href="#footer">Conclusions</a></li>
         </ul>
@@ -102,7 +102,7 @@
 
     
             <div class="methodology-description">
-              <h2>Methodology</h2>
+              <h2>Methods</h2>
               <p>
                 This section outlines the methodology for creating a gold-standard ASR corpus for low-resource languages, specifically isiXhosa. The process includes participant recruitment, audio data collection, audio transcription, and statistical analysis tools.
       	      </p>
