--- a/fardoza.html
+++ b/fardoza.html
@@ -51,7 +51,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="#abstract">Abstract</a></li>
-          <li><a class="nav-link scrollto" href="#methodology">Methodology</a></li>
+          <li><a class="nav-link scrollto" href="#methodology">Methods</a></li>
           <li><a class="nav-link scrollto" href="#results">Results</a></li>
           <li><a class="nav-link scrollto" href="#footer">Conclusions</a></li>
         </ul>
@@ -102,7 +102,7 @@
 
     
             <div class="methodology-description">
-              <h2>Methodology</h2>
+              <h2>Methods</h2>
               <p>
                 Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
               </p>
