--- a/sabiha.html
+++ b/sabiha.html
@@ -125,8 +125,8 @@
               <div class="image-container" style="display: flex; justify-content: center;">
                 <div class="image">
                   <figure>
-  		     <img src="img/sabiha/turkle.png" alt="Dataset statistics for the 2 sub-corpora" width="100%" height="auto">
-  		     <figcaption>Figure 1: Turkle web applicationin transcription interface</figcaption>
+  		     <img src="img/sabiha/turkle.png" alt="Dataset statistics for the 2 sub-corpora" width="100%" height="auto" style="border: 2px solid black;">
+  		     <figcaption><strong> Figure 1: Turkle web applicationin transcription interface</strong> </figcaption>
                   </figure>
                 </div>  
               </div>
@@ -170,15 +170,15 @@
             <div class="image-container" style="display: flex; justify-content: space-between;">  
               <div class="image">
               <figure>
-  		 <img src="img/sabiha/zip1.png" alt="zipf's law for structured audio" width="70%" height="auto">
-  		 <figcaption>Figure 2: Zipf's Law Distribution:for Structured Audio</figcaption>
+  		 <img src="img/sabiha/zip1.png" alt="zipf's law for structured audio" width="70%" height="auto" style="border: 2px solid black;">
+  		 <figcaption><strong> Figure 2: Zipf's Law Distribution:for Structured Audio</strong></figcaption>
               </figure>
               </div>
               
               <div class="image">
               <figure>
-  		 <img src="img/sabiha/zip2.png" alt="zipf's law for unstructured audio" width="70%" height="auto">
-  		 <figcaption>Figure 3: Zipf's Law Distributionfor Untructured Audio</figcaption>
+  		 <img src="img/sabiha/zip2.png" alt="zipf's law for unstructured audio" width="70%" height="auto" style="border: 2px solid black;">
+  		 <figcaption><strong> Figure 3: Zipf's Law Distributionfor Untructured Audio</strong> </figcaption>
               </figure>
               </div>
               
@@ -188,7 +188,7 @@
           <div class="image-container" style="display: flex; justify-content: center;">
               <div class="image">
               <figure>
-  		 <img src="img/sabiha/stats.png" alt="Dataset statistics for the 2 sub-corpora" width="70%" height="auto">
+  		 <img src="img/sabiha/stats.png" alt="Dataset statistics for the 2 sub-corpora" width="70%" height="auto" style="border: 2px solid black;">
               </figure>
               </div>  
           </div>
